--- a/quiz.css
+++ b/quiz.css
@@ -1,59 +1,57 @@
-body {
-font-family: Roboto, open-sans, sans-serif;
-}
 article {
-border: 1px solid lightblue;
-max-width: 30%;
-/* background-color: #eee; */
+	display: block;
+	border: 1px solid lightblue;
+	max-width: 30%;
+	margin: auto;
+	/* background-color: #eee; */
 }
-.title {
-
-}
+/* .title { 
+}*/
 #pencil {
-background-color: yellow;
-text-align: center;
-border: 1px dotted lightgray;
-/* width: 100%; */
-margin: 2px;
+	background-color: yellow;
+	text-align: center;
+	border: 1px dotted lightgray;
+	/* width: 100%; */
+	margin: 2px;
 }
-a {
-  /* display: block; */
+	a {
+	/* display: block; */
 }
 .justify {
-  text-align: justify;
-  padding: 0 15px;
-}
-.available {
-  font-weight: 600;
-  color: yellow;
-  background-color: darkgray;
-  padding-left: 20px;
-  /* border: 2px solid #fff; */
+	text-align: justify;
+	padding: 0 15px;
+	}
+	.available {
+	font-weight: 600;
+	color: yellow;
+	background-color: darkgray;
+	padding-left: 20px;
+/* border: 2px solid #fff; */
 }
 img {
-  /* border: 2px solid #ddd; */
-  display: block;
-  max-height: 100px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20px;
-}
-.specs {
-  text-align: center;
-  margin: 0;
-  /* padding: 0; */
+	/* border: 2px solid #ddd; */
+	display: block;
+	max-height: 100px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+	}
+	.specs {
+	text-align: center;
+	margin: 0;
+	/* padding: 0; */
 }
 .dim {
-  font-size: .8em;
-  line-height: .8em;
-  padding-left: 20px;
-  font-weight: bold;
-}
-footer {
-  font-size: .6em;
-  text-align: right;
-  padding-right: 10px;
-}
+	font-size: .8em;
+	line-height: .8em;
+	padding-left: 20px;
+	font-weight: bold;
+	}
+	footer {
+	font-size: .6em;
+	text-align: right;
+	padding-right: 10px;
+	}
 div {
-  display: inline-block;
+display: block;
 }
