--- a/quiz.css
+++ b/quiz.css
@@ -1,8 +1,17 @@
-article {
-	display: block;
+body {
+	
+}
+
+
+
+	article {
+	/* display: block; */
 	border: 1px solid lightblue;
-	max-width: 30%;
-	margin: auto;
+	width: 30%;
+	height: 560.525px;
+	margin-left: 2.5%;
+	margin-top: 10px;
+	float: left;
 	/* background-color: #eee; */
 }
 /* .title { 
@@ -14,6 +23,44 @@ article {
 	/* width: 100%; */
 	margin: 2px;
 }
+
+#inkpen {
+	background-color: orange;
+	text-align: center;
+	border: 1px dotted lightgray;
+	/* width: 100%; */
+	margin: 2px;
+}
+
+#sharpener {
+	background-color: greenyellow;
+	text-align: center;
+	border: 1px dotted lightgray;
+	margin: 2px;
+}
+
+#stapler {
+	background-color: red;
+	text-align: center;
+	border: 1px dotted lightgray;
+	margin: 2px;
+}
+
+#stamp {
+	background-color: gray;
+	text-align: center;
+	border: 1px dotted lightgray;
+	margin: 2px;
+}
+
+#notepad {
+	background-color: sandybrown;
+	text-align: center;
+	border: 1px dotted lightgray;
+	margin: 2px;
+}
+
+
 	a {
 	/* display: block; */
 }
@@ -31,7 +78,7 @@ article {
 img {
 	/* border: 2px solid #ddd; */
 	display: block;
-	max-height: 100px;
+	height: 100px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
